stryker/Metadata/unpackaged/objects/Cheque_Details__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ICICI</fullName>
                </value>
                <value>
                    <fullName>SBI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cheque_No__c</fullName>
        <label>Cheque No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposite_Date__c</fullName>
        <label>Deposite Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issued_Date__c</fullName>
        <label>Issued Date</label>
        <type>Date</type>
    </fields>
    <label>Cheque Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cheque Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cheque Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>